# fastapi_learn_project

./: .gitignore  README.md  crud.py  db.sqlite3  items_views.py  main.py  pyproject.toml  queries.sql
alembic/: alembic_notes  env.py
alembic/versions/: 2025_09_25_1558-e5477d790cc7_create_products_table.py  2025_09_25_1700-d6c60a6ca92e_create_products_table.py  2025_09_25_1705-2d11996323bb_create_users_table.py  2025_09_25_1806-62dd7796e90e_create_posts_table.py  2025_09_25_1850-3e5ba60ca53e_create_profile_table.py  2025_09_26_1817-34b1b32ea635_create_order_table.py  2025_09_26_1833-56df24a8539d_create_order_product_association_table.py  2025_09_27_1540-031248fc5bd9_add_count_column_to_order_product_.py  2025_09_28_1752-6c50c23bdc31_add_unit_price_column_to_order_product_.py
api_v1/: __init__.py
api_v1/demo_auth/: views.py
api_v1/products/: crud.py  dependencies.py  schemas.py  views.py
core/: config.py
core/models/: __init__.py  base.py  db_helper.py  mixins.py  order.py  order_product_association.py  post.py  product.py  profile.py  user.py
users/: crud.py  schemas.py
