[tool.poetry]
name = "my-project"
version = "0.1.0"
description = ""
authors = ["Yury Petrov <gderpov@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.117.1"
uvicorn = {extras = ["standard"], version = "^0.36.1"}
pydantic = {extras = ["email"], version = "^2.11.9"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.43"}
aiosqlite = "^0.21.0"
pydantic-settings = "^2.10.1"

[tool.poetry.group.dev.dependencies]
black = "^25.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
